--- a/aula0.3.html
+++ b/aula0.3.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <title>CSS</title>
-        <!-- CSS Linkado  -->
-        <link rel="stylesheet" href="css/aula3.css">
+  <head>
+    <meta charset="UTF-8" />
+    <title>CSS</title>
+    <!-- CSS Linkado  -->
+    <link rel="stylesheet" href="css/aula3.css" />
 
-        <!-- CSS Incorporado, fica na região head do documento -->
-        <style>
-            h1{color: blueviolet;}
-        </style>
-    </head>
-    <body>
-        <!-- CSS Inline. é válido para tags específicas. Está mais perto d tag, então no efeito cascara ele é mais forte -->
-        <h1 style="color:grey;">Raw It</h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt consequuntur voluptate neque fugiat autem, placeat optio nihil perspiciatis quo qui explicabo id et dolore tenetur ipsam ex aliquid illum recusandae.
-        </p>
-    </body>
+    <!-- CSS Incorporado, fica na região head do documento -->
+    <style>
+      h1 {
+        color: blueviolet;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- CSS Inline. é válido para tags específicas. Está mais perto d tag, então no efeito cascara ele é mais forte -->
+    <h1 style="color: grey">Raw It</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+      consequuntur voluptate neque fugiat autem, placeat optio nihil
+      perspiciatis quo qui explicabo id et dolore tenetur ipsam ex aliquid illum
+      recusandae.
+    </p>
+  </body>
 </html>
