--- a/aula0.8.html
+++ b/aula0.8.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <title>Box-Model 1</title>
-        <link rel="stylesheet" href="css/aula8.css">
-    </head>
-    <body>
-        <div class="box1">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate dolore molestiae esse provident est vitae alias, neque delectus? Quas labore neque expedita ex. Accusantium quod facilis, incidunt consequuntur excepturi tempore.</p>
-        </div>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Box-Model 1</title>
+    <link rel="stylesheet" href="css/aula8.css" />
+  </head>
+  <body>
+    <div class="box1">
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate
+        dolore molestiae esse provident est vitae alias, neque delectus? Quas
+        labore neque expedita ex. Accusantium quod facilis, incidunt
+        consequuntur excepturi tempore.
+      </p>
+    </div>
 
-        <div class="parallax"></div>
+    <div class="parallax"></div>
 
-        <div class="box2">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolor? Unde temporibus cumque repudiandae praesentium corrupti amet, reiciendis consequatur, culpa, veritatis reprehenderit recusandae quisquam maxime commodi alias totam inventore similique!</p>
-        </div>
-    </body>
+    <div class="box2">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolor?
+        Unde temporibus cumque repudiandae praesentium corrupti amet, reiciendis
+        consequatur, culpa, veritatis reprehenderit recusandae quisquam maxime
+        commodi alias totam inventore similique!
+      </p>
+    </div>
+  </body>
 </html>
