--- a/aula1.4.html
+++ b/aula1.4.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <!-- Todo projeto responsivo precisa ter a meta tag viewport -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Layout Responsivo</title>
-        
-        <!-- 
+  <head>
+    <meta charset="UTF-8" />
+    <!-- Todo projeto responsivo precisa ter a meta tag viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Layout Responsivo</title>
+
+    <!-- 
         Celular
         <link rel="stylesheet" href="css/aula14-celular.css" media="screen and (max-width: 600px)">
 
@@ -24,9 +24,7 @@
             É a mudança de estilo em determinada largura de tela. 
          -->
 
-        <link rel="stylesheet" href="css/aula14.css"> 
-    </head>
-    <body>
-        
-    </body>
+    <link rel="stylesheet" href="css/aula14.css" />
+  </head>
+  <body></body>
 </html>
