--- a/aula1.5.html
+++ b/aula1.5.html
@@ -1,112 +1,155 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Projeto Site com Ecommerce - Prática</title>
-        <link rel="stylesheet" href="css/aula15.css">
-    </head>
-    <body>
-        <!-- Topo -->
-        <header>
-            <h1>
-                <img src="../Imagens/Logos/logo-codeblue.png" alt="CodeBlue">
-            </h1>
-        </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Projeto Site com Ecommerce - Prática</title>
+    <link rel="stylesheet" href="css/aula15.css" />
+  </head>
+  <body>
+    <!-- Topo -->
+    <header>
+      <h1>
+        <img src="../Imagens/Logos/logo-codeblue.png" alt="CodeBlue" />
+      </h1>
+    </header>
 
-         <!-- Conteúdo Home -->
-        <main>
-            <!-- Banner Principal -->
-            <figure class="banner-principal">
-                <img src="../Imagens/Fotos/familia-na-praia.jpg" alt="Família na Praia">
+    <!-- Conteúdo Home -->
+    <main>
+      <!-- Banner Principal -->
+      <figure class="banner-principal">
+        <img
+          src="../Imagens/Fotos/familia-na-praia.jpg"
+          alt="Família na Praia"
+        />
+      </figure>
+
+      <!-- Artigos -->
+      <section class="container">
+        <section class="artigo artigo1">
+          <figure>
+            <img
+              src="../Imagens/Fotos/img-placeholder.png"
+              alt="Menina Olhando para a câmera"
+            />
+          </figure>
+          <article>
+            <h2>Lorem Ipsum is simply dummy text</h2>
+            <p>
+              <strong>Lorem ipsum</strong> dolor sit amet consectetur,
+              adipisicing elit. Veritatis mollitia, molestiae deleniti tempora
+              dolorum aliquam voluptatem provident deserunt a assumenda.
+            </p>
+          </article>
+        </section>
+
+        <section class="artigo artigo2">
+          <article>
+            <h2>Lorem Ipsum is simply dummy text</h2>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever <strong>since the 1500s.</strong>
+            </p>
+            <br />
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard
+              <strong>dummy text</strong> ever since the 1500s.
+            </p>
+          </article>
+          <figure>
+            <img
+              src="../Imagens/Fotos/img-placeholder1.png"
+              alt="menina olhando para cãmera"
+            />
+          </figure>
+        </section>
+
+        <!-- Conheça -->
+        <section class="conheca">
+          <h3>Conheça</h3>
+          <section>
+            <article>
+              <figure>
+                <img src="../Imagens/Fotos/conheça1.png" alt="" />
+              </figure>
+              <p><strong>Lorem Ipsum is simply</strong> dummy text</p>
+              <p><a href="#">Descubra</a></p>
+            </article>
+
+            <article>
+              <figure>
+                <img src="../Imagens/Fotos/conheça2.png" alt="" />
+              </figure>
+              <p><strong>Lorem Ipsum is simply</strong> dummy text</p>
+              <p><a href="#">Descubra</a></p>
+            </article>
+
+            <article>
+              <figure>
+                <img src="../Imagens/Fotos/conheça3.png" alt="" />
+              </figure>
+              <p><strong>Lorem Ipsum is simply</strong> dummy text</p>
+              <p><a href="#">Descubra</a></p>
+            </article>
+          </section>
+        </section>
+      </section>
+
+      <!-- Receitas -->
+      <section class="receita1">
+        <section class="container">
+          <article>
+            <figure>
+              <img src="../Imagens/Fotos/receita1.png" alt="mulher pulando" />
             </figure>
+            <article>
+              <h2>Lorem Ipsum is simply dummy text of the</h2>
 
-            <!-- Artigos -->
-            <section class="container">
-                <section class="artigo artigo1">
-                    <figure>
-                        <img src="../Imagens/Fotos/img-placeholder.png" alt="Menina Olhando para a câmera">
-                    </figure>
-                    <article>
-                        <h2>
-                            Lorem Ipsum is simply dummy text
-                        </h2>
-                        <p><strong>Lorem ipsum</strong> dolor sit amet consectetur, adipisicing elit. Veritatis mollitia, molestiae deleniti tempora dolorum aliquam voluptatem provident deserunt a assumenda.</p>
-                    </article>
-                </section>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s
+              </p>
 
-                <section class="artigo artigo2">
-                    <article>
-                        <h2>Lorem Ipsum is simply dummy text</h2>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever <strong>since the 1500s.</strong></p><br>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard <strong>dummy text</strong> ever since the 1500s.</p>
-                    </article>
-                    <figure>
-                        <img src="../Imagens/Fotos/img-placeholder1.png" alt="menina olhando para cãmera">
-                    </figure>
-                </section>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and
+                <strong>typesetting industry</strong>. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s
+              </p>
 
-                <!-- Conheça -->
-                <section class="conheca">
-                    <h3>Conheça</h3>
-                    <section>
-                        <article>
-                            <figure>
-                                <img src="../Imagens/Fotos/conheça1.png" alt="">
-                            </figure>
-                            <P><strong>Lorem Ipsum is simply</strong> dummy text</P>
-                            <p><a href="#">Descubra</a></p>
-                        </article>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard
+                <strong>dummy text</strong> ever since the 1500s
+              </p>
 
-                        <article>
-                            <figure>
-                                <img src="../Imagens/Fotos/conheça2.png" alt="">
-                            </figure>
-                            <P><strong>Lorem Ipsum is simply</strong> dummy text</P>
-                            <p><a href="#">Descubra</a></P>
-                        </article>
-
-                        <article>
-                            <figure>
-                                <img src="../Imagens/Fotos/conheça3.png" alt="">
-                            </figure>
-                            <P><strong>Lorem Ipsum is simply</strong> dummy text</P>
-                            <p><a href="#">Descubra</a></P>
-                        </article>
-                    </section>
-                </section>
-            </section>
-
-            <!-- Receitas -->
-            <section class="receita1">
-                <section class="container">
-                    <article>
-                        <figure>
-                            <img src="../Imagens/Fotos/receita1.png" alt="mulher pulando">
-                        </figure>
-                        <article>
-                            <h2>Lorem Ipsum is simply dummy text of the</h2>
-
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                            
-                            <p>Lorem Ipsum is simply dummy text of the printing and <strong>typesetting industry</strong>. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                            
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard <strong>dummy text</strong> ever since the 1500s</p>
-
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                        </article>
-                    </article>
-                    <h3>Dica</h3>
-                    <article class="dica">
-                        <figure>
-                            <img src="../Imagens/Fotos/receita2.png" alt=" video fake">
-                        </figure>
-                        <article><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                        <p>#Exemple</p>
-                        </article>
-                    </article>
-                </section>
-            </section>
-        </main>
-    </body>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s
+              </p>
+            </article>
+          </article>
+          <h3>Dica</h3>
+          <article class="dica">
+            <figure>
+              <img src="../Imagens/Fotos/receita2.png" alt=" video fake" />
+            </figure>
+            <article>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s. Lorem Ipsum is simply dummy text of
+                the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s.
+              </p>
+              <p>#Exemple</p>
+            </article>
+          </article>
+        </section>
+      </section>
+    </main>
+  </body>
 </html>
