--- a/aula1.7.html
+++ b/aula1.7.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/aula17.css">
-        <title>CSS3</title>
-    </head>
-    <body>
-        <div class="box1"></div>
-        <div class="box2"></div>
-        <h1>TESTE</h1>
-        <img src="../Imagens/Fotos/imagem7.jpg">
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/aula17.css" />
+    <title>CSS3</title>
+  </head>
+  <body>
+    <div class="box1"></div>
+    <div class="box2"></div>
+    <h1>TESTE</h1>
+    <img src="../Imagens/Fotos/imagem7.jpg" />
+  </body>
 </html>
