--- a/aula2.0.html
+++ b/aula2.0.html
@@ -1,176 +1,221 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/aula20.css">
-        <title>Aplicação Prática</title>
-    </head>
-    <body>
-        <header>
-            <!-- Status bar -->
-            <img src="../Exercícios/Arquivos Aula 20/Status Bar.png" alt="">
-        </header>
-        
-        <main class="container">
-            <!-- Conteúdo -->
-            <!-- Topo -->
-           <h1>Discover</h1>
-           <h2>What's new today</h2>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Roboto:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/aula20.css" />
+    <title>Aplicação Prática</title>
+  </head>
+  <body>
+    <header>
+      <!-- Status bar -->
+      <img src="../Exercícios/Arquivos Aula 20/Status Bar.png" alt="" />
+    </header>
 
-           <!-- Feed -->
-                <section class="stories">
-                    <section class="storie">
-                        <figure>
-                            <img src="../Exercícios/Arquivos Aula 20/stories1.png" alt="storie1">
-                        </figure>
+    <main class="container">
+      <!-- Conteúdo -->
+      <!-- Topo -->
+      <h1>Discover</h1>
+      <h2>What's new today</h2>
 
-                        <!-- Post 1 -->
-                        <article class="legenda">
-                            <article>
-                                <img src="../Exercícios/Arquivos Aula 20/user1.png" alt="user1">
-                            </article>
+      <!-- Feed -->
+      <section class="stories">
+        <section class="storie">
+          <figure>
+            <img
+              src="../Exercícios/Arquivos Aula 20/stories1.png"
+              alt="storie1"
+            />
+          </figure>
 
-                            <article>
-                                <p class="name">Ridhwan Nordin</p>
-                                <P class="user">@ridzjcob</P>
-                            </article>
-                        </article>
-                    </section>
+          <!-- Post 1 -->
+          <article class="legenda">
+            <article>
+              <img src="../Exercícios/Arquivos Aula 20/user1.png" alt="user1" />
+            </article>
 
-                    <!-- Post 2 -->
-                    <section class="storie">
-                        <figure>
-                            <img src="../Exercícios/Arquivos Aula 20/stories2.png" alt="storie2">
-                        </figure>
+            <article>
+              <p class="name">Ridhwan Nordin</p>
+              <p class="user">@ridzjcob</p>
+            </article>
+          </article>
+        </section>
 
-                        <article class="legenda">
-                            <article>
-                                <img src="../Exercícios/Arquivos Aula 20/user2.png" alt="user2">
-                            </article>
+        <!-- Post 2 -->
+        <section class="storie">
+          <figure>
+            <img
+              src="../Exercícios/Arquivos Aula 20/stories2.png"
+              alt="storie2"
+            />
+          </figure>
 
-                            <article>
-                                <p class="name">Clem Onojeghuo</p>
-                                <P class="user">@clemono2</P>
-                            </article>
-                        </article>
-                    </section>
+          <article class="legenda">
+            <article>
+              <img src="../Exercícios/Arquivos Aula 20/user2.png" alt="user2" />
+            </article>
 
-                    <!-- Post 3 -->
-                    <section class="storie">
-                        <figure>
-                            <img src="../Exercícios/Arquivos Aula 20/stories3.png" alt="storie3">
-                        </figure>
+            <article>
+              <p class="name">Clem Onojeghuo</p>
+              <p class="user">@clemono2</p>
+            </article>
+          </article>
+        </section>
 
-                        <article class="legenda">
-                            <article>
-                                <img src="../Exercícios/Arquivos Aula 20/user3.png" alt="user3">
-                            </article>
+        <!-- Post 3 -->
+        <section class="storie">
+          <figure>
+            <img
+              src="../Exercícios/Arquivos Aula 20/stories3.png"
+              alt="storie3"
+            />
+          </figure>
 
-                            <article>
-                                <p class="name">Jon Tyson</p>
-                                <P class="user">@smnzhu</P>
-                            </article>
-                        </article>
-                    </section>
+          <article class="legenda">
+            <article>
+              <img src="../Exercícios/Arquivos Aula 20/user3.png" alt="user3" />
+            </article>
 
-                    <!-- Post 4 -->
-                    <section class="storie">
-                        <figure>
-                            <img src="../Exercícios/Arquivos Aula 20/stories4.png" alt="storie4">
-                        </figure>
+            <article>
+              <p class="name">Jon Tyson</p>
+              <p class="user">@smnzhu</p>
+            </article>
+          </article>
+        </section>
 
-                        <article class="legenda">
-                            <article>
-                                <img src="../Exercícios/Arquivos Aula 20/user4.png" alt="user4">
-                            </article>
+        <!-- Post 4 -->
+        <section class="storie">
+          <figure>
+            <img
+              src="../Exercícios/Arquivos Aula 20/stories4.png"
+              alt="storie4"
+            />
+          </figure>
 
-                            <article>
-                                <p class="name">Simon Zhu</p>
-                                <P class="user">@smnzhu</P>
-                            </article>
-                        </article>
-                    </section>
-                </section>
+          <article class="legenda">
+            <article>
+              <img src="../Exercícios/Arquivos Aula 20/user4.png" alt="user4" />
+            </article>
 
-           <h2>Browse All</h2>
+            <article>
+              <p class="name">Simon Zhu</p>
+              <p class="user">@smnzhu</p>
+            </article>
+          </article>
+        </section>
+      </section>
 
-           <section class="colunas">
-                <div class="col1">
-                    <figure>
-                        <img src="../Exercícios/Arquivos Aula 20/img1col1.png" alt="Abstrato Vermelho">
-                    </figure>
-                    <figure>
-                        <img src="../Exercícios/Arquivos Aula 20/img2col1.png" alt="Mulher na Neve">
-                    </figure>
-                    <figure>
-                        <img src="../Exercícios/Arquivos Aula 20/img3col1.png" alt="Parede de Madeira">
-                    </figure>
-                    <figure>
-                        <img src="../Exercícios/Arquivos Aula 20/img4col1.png" alt="Café">
-                    </figure>
-                    <figure>
-                        <img src="../Exercícios/Arquivos Aula 20/img5col1.png" alt="Faixa Branca Rua">
-                    </figure>
-                </div>
+      <h2>Browse All</h2>
 
-                <div class="col2">
-                    <figure>
-                        <img src="../Exercícios/Arquivos Aula 20/img1col2.png" alt="Mãos Dadas">
-                    </figure>
-                    <figure>
-                        <img src="../Exercícios/Arquivos Aula 20/img2col2.png" alt="Doguinho no Surfista">
-                    </figure>
-                    <figure>
-                        <img src="../Exercícios/Arquivos Aula 20/img3col2.png" alt="Vidro com Chuva">
-                    </figure>
-                    <figure>
-                        <img src="../Exercícios/Arquivos Aula 20/img4col2.png" alt="Escadaria">
-                    </figure>
-                    <figure>
-                        <img src="../Exercícios/Arquivos Aula 20/img5col2.png" alt="Barco na Água">
-                    </figure>
-                </div>
-            </section>
+      <section class="colunas">
+        <div class="col1">
+          <figure>
+            <img
+              src="../Exercícios/Arquivos Aula 20/img1col1.png"
+              alt="Abstrato Vermelho"
+            />
+          </figure>
+          <figure>
+            <img
+              src="../Exercícios/Arquivos Aula 20/img2col1.png"
+              alt="Mulher na Neve"
+            />
+          </figure>
+          <figure>
+            <img
+              src="../Exercícios/Arquivos Aula 20/img3col1.png"
+              alt="Parede de Madeira"
+            />
+          </figure>
+          <figure>
+            <img src="../Exercícios/Arquivos Aula 20/img4col1.png" alt="Café" />
+          </figure>
+          <figure>
+            <img
+              src="../Exercícios/Arquivos Aula 20/img5col1.png"
+              alt="Faixa Branca Rua"
+            />
+          </figure>
+        </div>
 
-            <section>
-                <p class="see-more">
-                    <a href="#">See More</a>
-                </p>
-            </section>
-        </main>
+        <div class="col2">
+          <figure>
+            <img
+              src="../Exercícios/Arquivos Aula 20/img1col2.png"
+              alt="Mãos Dadas"
+            />
+          </figure>
+          <figure>
+            <img
+              src="../Exercícios/Arquivos Aula 20/img2col2.png"
+              alt="Doguinho no Surfista"
+            />
+          </figure>
+          <figure>
+            <img
+              src="../Exercícios/Arquivos Aula 20/img3col2.png"
+              alt="Vidro com Chuva"
+            />
+          </figure>
+          <figure>
+            <img
+              src="../Exercícios/Arquivos Aula 20/img4col2.png"
+              alt="Escadaria"
+            />
+          </figure>
+          <figure>
+            <img
+              src="../Exercícios/Arquivos Aula 20/img5col2.png"
+              alt="Barco na Água"
+            />
+          </figure>
+        </div>
+      </section>
 
-        <footer>
-           <ul>
-            <li>
-                <a href="#">
-                    <img src="../Exercícios/Arquivos Aula 20/home.png" alt="Home">
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="../Exercícios/Arquivos Aula 20/search.png" alt="Search">
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="../Exercícios/Arquivos Aula 20/new.png" alt="New Post">
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="../Exercícios/Arquivos Aula 20/Comment.png" alt="Comment">
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="../Exercícios/Arquivos Aula 20/bell.png" alt="Bell">
-                </a>
-            </li>
-           </ul>
-        </footer>
-    </body>
+      <section>
+        <p class="see-more">
+          <a href="#">See More</a>
+        </p>
+      </section>
+    </main>
+
+    <footer>
+      <ul>
+        <li>
+          <a href="#">
+            <img src="../Exercícios/Arquivos Aula 20/home.png" alt="Home" />
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="../Exercícios/Arquivos Aula 20/search.png" alt="Search" />
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="../Exercícios/Arquivos Aula 20/new.png" alt="New Post" />
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img
+              src="../Exercícios/Arquivos Aula 20/Comment.png"
+              alt="Comment"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="../Exercícios/Arquivos Aula 20/bell.png" alt="Bell" />
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
