--- a/aula0.9.html
+++ b/aula0.9.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <title>Box-Model 2</title>
-        <link rel="stylesheet" href="css/aula9.css">
-    </head>
-    <body>
-        <ul class="first-level">
-            <li>Item 1</li>
-            <li>
-                Item 2
-                <ul>
-                    <li><a href="">Item 2.1</a></li>
-                    <li>Item 2.2</li>
-                </ul>
-            </li>
-            <li>Item 3</li>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Box-Model 2</title>
+    <link rel="stylesheet" href="css/aula9.css" />
+  </head>
+  <body>
+    <ul class="first-level">
+      <li>Item 1</li>
+      <li>
+        Item 2
+        <ul>
+          <li><a href="">Item 2.1</a></li>
+          <li>Item 2.2</li>
         </ul>
+      </li>
+      <li>Item 3</li>
+    </ul>
 
-        <p>
-            <input type="text">
-        </p>
+    <p>
+      <input type="text" />
+    </p>
 
-       <div class="box1">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore eos, recusandae, illum dolorum commodi unde odit, repellendus corporis consequatur impedit necessitatibus explicabo numquam delectus reiciendis consectetur! Totam neque explicabo sed.
-            Voluptatum, voluptatem repudiandae harum aliquid eos praesentium quibusdam dolorem, corporis ratione aliquam, obcaecati qui eaque ipsa sapiente odio. Aliquid tempora vitae dolorum impedit molestiae nihil nobis ipsam ullam adipisci maxime!
-            Qui libero eum quia pariatur deserunt temporibus nobis tenetur dolorum eaque, officiis, optio sint nihil. Molestias, dolorem. Sed tempore officia sunt eligendi cum molestiae nihil dolor possimus rem, architecto ipsa.</p>
-       </div> 
-    </body>
+    <div class="box1">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore eos,
+        recusandae, illum dolorum commodi unde odit, repellendus corporis
+        consequatur impedit necessitatibus explicabo numquam delectus reiciendis
+        consectetur! Totam neque explicabo sed. Voluptatum, voluptatem
+        repudiandae harum aliquid eos praesentium quibusdam dolorem, corporis
+        ratione aliquam, obcaecati qui eaque ipsa sapiente odio. Aliquid tempora
+        vitae dolorum impedit molestiae nihil nobis ipsam ullam adipisci maxime!
+        Qui libero eum quia pariatur deserunt temporibus nobis tenetur dolorum
+        eaque, officiis, optio sint nihil. Molestias, dolorem. Sed tempore
+        officia sunt eligendi cum molestiae nihil dolor possimus rem, architecto
+        ipsa.
+      </p>
+    </div>
+  </body>
 </html>
