--- a/aula1.9.html
+++ b/aula1.9.html
@@ -1,36 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Aplicações Práticas</title>
-        <link rel="stylesheet" href="css/aula19.css">
-    </head>
-    <body>
-        <header class="container">
-
-        </header>
-        <nav class="container">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li>
-                    <a href="#">Produtos</a>
-                    <ul>
-                        <li><a href="#">caneca</a></li>
-                        <li><a href="#">camiseta</a></li>
-                        <li><a href="#">boné</a></li>
-                        <li><a href="#">meia</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Portifólio</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Contato</a></li>
-            </ul>
-        </nav>
-        <main>
-            <section class="banner container">
-
-            </section>
-        </main>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Aplicações Práticas</title>
+    <link rel="stylesheet" href="css/aula19.css" />
+  </head>
+  <body>
+    <header class="container"></header>
+    <nav class="container">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li>
+          <a href="#">Produtos</a>
+          <ul>
+            <li><a href="#">caneca</a></li>
+            <li><a href="#">camiseta</a></li>
+            <li><a href="#">boné</a></li>
+            <li><a href="#">meia</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Portifólio</a></li>
+        <li><a href="#">Sobre</a></li>
+        <li><a href="#">Contato</a></li>
+      </ul>
+    </nav>
+    <main>
+      <section class="banner container"></section>
+    </main>
+  </body>
 </html>
