--- a/layout-divs.html
+++ b/layout-divs.html
@@ -1,58 +1,85 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <title>Layout Div's</title>
-    </head>
-    <body>
-        
-        <div class="container">
-            <!-- Aqui começa o topo -->
-            <div class="header">
-                <img src="../Imagens/Logos/logo-codeblue.png" alt="Logo CodeBlue">
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Layout Div's</title>
+  </head>
+  <body>
+    <div class="container">
+      <!-- Aqui começa o topo -->
+      <div class="header">
+        <img src="../Imagens/Logos/logo-codeblue.png" alt="Logo CodeBlue" />
+      </div>
 
-            <!-- aqui começa o menu -->
-            <div class="menu">
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Imagens</a></li>
-                    <li><a href="">Produtos</a></li>
-                    <li><a href="">Contatos</a></li>
-                </ul>
-                <!-- Quando a se usa um "#" dentro de um href é chamado de link cego, norlamalmente empregado quando não se sabe quais serão as páginas alocadas -->
-            </div>
+      <!-- aqui começa o menu -->
+      <div class="menu">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">Imagens</a></li>
+          <li><a href="">Produtos</a></li>
+          <li><a href="">Contatos</a></li>
+        </ul>
+        <!-- Quando a se usa um "#" dentro de um href é chamado de link cego, norlamalmente empregado quando não se sabe quais serão as páginas alocadas -->
+      </div>
 
-            <!-- Aqui começa o conteudo da Home -->
-            <div class="content">
-                <div>
-                    <h2>Notícia 1</h2>
-                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, aperiam quidem! Fugit deleniti, ut odit inventore ipsa repellendus porro placeat error id culpa fuga. Totam corrupti nulla quibusdam delectus ratione!</P>
-                    <p>Fugit excepturi, ipsam et dignissimos fuga asperiores? Odio recusandae architecto perspiciatis, nihil necessitatibus soluta cum sed consectetur ex dignissimos nam temporibus, consequatur obcaecati commodi, dolore laudantium saepe quae est sapiente.</p>   
-                    <p class="leia"><a href="">Leia mais...</a></p>
-                </div>
-
-
-                <div>
-                    <h2>Notícia 2</h2>
-                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, aperiam quidem! Fugit deleniti, ut odit inventore ipsa repellendus porro placeat error id culpa fuga. Totam corrupti nulla quibusdam delectus ratione!</P>
-                    <p>Fugit excepturi, ipsam et dignissimos fuga asperiores? Odio recusandae architecto perspiciatis, nihil necessitatibus soluta cum sed consectetur ex dignissimos nam temporibus, consequatur obcaecati commodi, dolore laudantium saepe quae est sapiente.</p>   
-                    <p class="leia"><a href="">Leia mais...</a></p>
-                </div>
-
-
-                <div>
-                    <h2>Notícia 3</h2>
-                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, aperiam quidem! Fugit deleniti, ut odit inventore ipsa repellendus porro placeat error id culpa fuga. Totam corrupti nulla quibusdam delectus ratione!</P>
-                    <p>Fugit excepturi, ipsam et dignissimos fuga asperiores? Odio recusandae architecto perspiciatis, nihil necessitatibus soluta cum sed consectetur ex dignissimos nam temporibus, consequatur obcaecati commodi, dolore laudantium saepe quae est sapiente.</p>   
-                    <p class="leia"><a href="">Leia mais...</a></p>
-                </div>
-            </div>
-
-            <!-- Aqui começa o rodapé -->
-            <div class="footer">
-                <p>&copy; Copyright - Todos os Direitos Reservados - CodeBlue</p> 
-            </div>
+      <!-- Aqui começa o conteudo da Home -->
+      <div class="content">
+        <div>
+          <h2>Notícia 1</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
+            aperiam quidem! Fugit deleniti, ut odit inventore ipsa repellendus
+            porro placeat error id culpa fuga. Totam corrupti nulla quibusdam
+            delectus ratione!
+          </p>
+          <p>
+            Fugit excepturi, ipsam et dignissimos fuga asperiores? Odio
+            recusandae architecto perspiciatis, nihil necessitatibus soluta cum
+            sed consectetur ex dignissimos nam temporibus, consequatur obcaecati
+            commodi, dolore laudantium saepe quae est sapiente.
+          </p>
+          <p class="leia"><a href="">Leia mais...</a></p>
         </div>
-    </body>
+
+        <div>
+          <h2>Notícia 2</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
+            aperiam quidem! Fugit deleniti, ut odit inventore ipsa repellendus
+            porro placeat error id culpa fuga. Totam corrupti nulla quibusdam
+            delectus ratione!
+          </p>
+          <p>
+            Fugit excepturi, ipsam et dignissimos fuga asperiores? Odio
+            recusandae architecto perspiciatis, nihil necessitatibus soluta cum
+            sed consectetur ex dignissimos nam temporibus, consequatur obcaecati
+            commodi, dolore laudantium saepe quae est sapiente.
+          </p>
+          <p class="leia"><a href="">Leia mais...</a></p>
+        </div>
+
+        <div>
+          <h2>Notícia 3</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
+            aperiam quidem! Fugit deleniti, ut odit inventore ipsa repellendus
+            porro placeat error id culpa fuga. Totam corrupti nulla quibusdam
+            delectus ratione!
+          </p>
+          <p>
+            Fugit excepturi, ipsam et dignissimos fuga asperiores? Odio
+            recusandae architecto perspiciatis, nihil necessitatibus soluta cum
+            sed consectetur ex dignissimos nam temporibus, consequatur obcaecati
+            commodi, dolore laudantium saepe quae est sapiente.
+          </p>
+          <p class="leia"><a href="">Leia mais...</a></p>
+        </div>
+      </div>
+
+      <!-- Aqui começa o rodapé -->
+      <div class="footer">
+        <p>&copy; Copyright - Todos os Direitos Reservados - CodeBlue</p>
+      </div>
+    </div>
+  </body>
 </html>
