--- a/aula2.1.html
+++ b/aula2.1.html
@@ -8,10 +8,14 @@
   </head>
   <body>
     <form action="" method="">
-        <!-- 
-                    Sempre declarar action e method
-                Existem dois valores mais utilizados para method , get e post. Get serve para formulários mais rápidos e menos sensiveis, vão para o link do site. e Post é mais adequado para dados como informações Pessoais e dados sensíveis.
+       <!-- 
+        Sempre declarar action e method
+        
+        Existem dois valores mais utilizados para method , get e post. Get serve para formulários mais rápidos e menos sensiveis, vão para o link do site. e Post é mais adequado para dados como informações Pessoais e dados sensíveis.
         -->
+      <fieldset>
+        <legend>Dados Pessoais</legend> 
+        <!--A tag legend serve apenas para dar título a regiões de formulários-->
       <ul>
         <li>
             <label for="nome">Nome:</label>
@@ -65,6 +69,7 @@
         <li>
             <label for="estado">Estado:</label>        
           <select id="estado" name="estado">
+            <option>Selecione</option>
             <option value="AC">Acre</option>
             <option value="AL">Alagoas</option>
             <option value="AP">Amapá</option>
@@ -100,6 +105,8 @@
              <textarea id="mensagem" name="mensagem"></textarea>
         </li>
       </ul>
+      </fieldset>
+        
         <!-- 
             Botão enviar
             Ao atribur "value" o mesmo contepudo aparecerá em todos os navegadores.
@@ -112,4 +119,3 @@
 </html>
 
 
-<!-- aula pausada em 2h02m -->
